Added a few projects

--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,15 @@ main {
   color: #222222;
   margin: 40px 0;
 }
+
+.fill {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
+.fill img {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
+}
