--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .content {
-  background: linear-gradient(to bottom, rgba(255, 205, 58, 0.75), rgba(255, 94, 158, 0.25), rgba(140, 66, 244, 0.85));
+  background: linear-gradient(to bottom, rgba(255, 146, 119, 0.55), rgba(255, 94, 158, 0.25), rgba(140, 66, 244, 0.95));
 
 }
 
@@ -50,6 +50,7 @@ body {
   margin: 0;
   font-size: 1.15rem;
   line-height: 1.4em;
+
 }
 
 
@@ -59,7 +60,8 @@ body {
   margin: 80px 10%;
   padding: 30px 60px;
   border-radius: 20px;
-  box-shadow: 0 3px 26px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 26px 0 rgba(0, 0, 0, 0.5);
+  /* max-width: 800px; */
 }
 
 main, header {
@@ -71,7 +73,8 @@ main {
   padding: 1px;
   border-radius: 10px;
   color: #222222;
-  margin: 40px 0;
+  /* margin: 40px 0; */
+
 }
 
 .fill {
